# driving-school

./: Cargo.toml  Dockerfile  README.md
.github/actions/update_version/: action.yaml
.github/workflows/: ci.yaml
src/: bumpix_client.rs  main.rs  schedule.rs  settings.rs
