[package]
name = "driving-school"
version = "24.5.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.34"
chrono-tz = "0.8.6"
clap = { version = "4.5.1", features = ["derive", "env"] }
color-eyre = "0.6.2"
dotenvy = "0.15.7"
fern = { version = "0.6.2", features = ["colored"] }
itertools = "0.12.1"
log = "0.4.20"
regex = "1.10.3"
reqwest = { version = "0.11.24", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls-native-roots",
] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_with = { version = "3.6.1", features = ["chrono"] }
thiserror = "1.0.60"
urlencoding = "2.1.3"
